--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
           <button id="g-button2" onclick="btn_click()">+2 </button>
           <button id="g-button3" onclick="btn_click()">+3 </button>
          </div>   
-        
+          <div>
+              </br>
+              </br>
+              &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp  &nbsp&nbsp &nbsp &nbsp &nbsp  &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+              <button id="reset-button" onclick ="btn_click()"> Reset </button>
+          </div>   
         <script src="index.js"></script>
     </body>
 </html>
